fixed responsiveness on mobile

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -51,3 +51,9 @@ body {
   justify-content: center;
   flex-direction: column;
 }
+
+@media only screen and (max-width: 425px) {
+  .logo {
+    height: 300px;
+  }
+}
